--- a/gui/src/app/marcacao.component.css
+++ b/gui/src/app/marcacao.component.css
@@ -45,34 +45,34 @@ td {
 
 .mandante {
     background-color: rgb(240, 240, 240);
-    width: 21%;
+    width: 25%;
 }
 
 .visitante {
     background-color: rgb(245, 245, 245);
-    width: 21%;
+    width: 25%;
 }
 
-.data {
+/*.data {
     background-color: rgb(13, 110, 183);
     color: white;
     font-weight: normal;
-    width: 20%;
-}
+    width: 0%;
+}*/
 
-#marcacaoMandante{
+.marcacaoMandante{
     background-color: rgb(240, 240, 240);
     font-weight: normal;
-    width: 10%;
+    width: 18%;
 }
 
 .marcacaoEmpate{
     background-color: rgb(240, 240, 240);
-    width: 13%;
+    width: 14%;
 }
 
-#marcacaoVisitante{
+.marcacaoVisitante{
     background-color: rgb(240, 240, 240);
     font-weight: normal;
-    width: 10%;
+    width: 18%;
 }
