--- a/gui/src/app/marcacao.component.html
+++ b/gui/src/app/marcacao.component.html
@@ -1,6 +1,7 @@
 <br/>
-<br/>
-
+<nav>
+    <button class="valorProposta" id="valorProposta" (click)="mostrarValor()" >valor da proposta</button>    
+</nav>
 
 <table>
     <tr *ngFor="let a of propostas">
