Implementação da geração do valor da proposta

--- a/gui/src/app/marcacao.component.html
+++ b/gui/src/app/marcacao.component.html
@@ -1,6 +1,6 @@
 <br/>
 <nav>
-    <button class="valorProposta" id="valorProposta" (click)="mostrarValor()" >valor da proposta</button>    
+    <button class="valorProposta" id="valorProposta" (click)="mostrarValor(propostas)" >valor da proposta</button>    
 </nav>
 
 <table>
